--- a/python-app/Dockerfile
+++ b/python-app/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3-alpine
 WORKDIR /service
-COPY python-app/requirements.txt .
+COPY requirements.txt .
 RUN pip install -r requirements.txt
 COPY . ./
 EXPOSE 8080
